# RemoteDebug

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
doc/: 跳转到.md
include/: transmit.h
src/: compile_source.h  main.cpp  memory_util.cpp  patch.cpp  patch_replace.cpp  ptrace_util.cpp  ptrace_util.h
src/python/: load_patch.py
src/shell/: inject_patch.sh  inject_patch_so.sh  inject_test.cpp
src/transmit/: ftp_transmit.h  ssh_transmit.cpp
test/: CMakeLists.txt  compile_source_test.cpp  demo  demo.cpp  inject_shell.cpp  main  main.cpp  patch.cpp
